Fixed column wrapping

--- a/app/src/css/additional.css
+++ b/app/src/css/additional.css
@@ -67,3 +67,12 @@
     min-width: 400px;
     padding: 10px;
 }
+
+.row.display-flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+.row.display-flex > [class*='col-'] {
+    display: flex;
+    flex-direction: column;
+}
